2004-11-26  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-form.el (w3m-form-resume): Check whether a form exists,
	before resuming its values from its history.

2004-11-25  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-exconn.el (shimbun-exconn-content-start): Synchronize.
	(shimbun-exconn-content-end): Ditto.

2004-11-23  S V N Vishwanathan  <vishketan@yahoo.com>

	* shimbun/sb-rediff.el (shimbun-rediff-month-alist): New variable.
	(shimbun-article): Signal an error if the url looks malformed; use
	match-string-no-properties instead of match-string.
	(shimbun-clear-contents): Improve regexps matching tags to be
	removed.
	(shimbun-make-contents): New function to make true Date headers.
	(shimbun-rss-build-message-id): Signal an error if the url string
	is not what is expected; improve the uniqueness of Message-IDs.

2004-11-23  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-wikimedia.el (shimbun-wikimedia-l10n-make-contents):
	Add alternate atmark(@) pattern.
	(shimbun-wikimedia-date-decode-rule-alist): Fix regular expression
	for date string mismatching problem.

2004-11-23  S V N Vishwanathan  <vishketan@yahoo.com>

	* shimbun/sb-rediff.el: New file.

2004-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Break
	continuous lines in editorials.

2004-11-21  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-wikimedia.el: New file.

2004-11-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-rss.el: New file.

	* w3m-antenna.el (w3m-antenna-check-rss): New function.
	(w3m-antenna-sites): Improve its customize spec to support
	`w3m-antenna-check-rss'.

	* w3m.el (w3m-content-type-alist): Add text/xml, application/xml,
	application/rdf+xml, and application/rss+xml.
	(w3m-detect-xml-charset): New function.
	(w3m-decode-buffer): Use the above function when decoding XML
	contents.

	* shimbun/sb-rss.el (shimbun-rss-process-date): Accept minus sign
	character for time zone.
